# Caustics3D

./: .gitignore  Cargo.toml  Caustics.h  Caustics3D  CausticsA.h  CausticsD.h  Derivative.h  Header.h  Makefile  README.md  Utilities.h  makefile  pyproject.toml  script.sh
Notes/: Derivatives of eigenvalue and eigenvector fields.tex
cpp/: Makefile
cpp/src/: Caustics.cpp  Caustics.h  Eigenvalues.h  Header.h  Hessian.h  Utilities.cpp  Utilities.h
data/: .gitignore  Makefile
docs/: index.html
lit/: caustics.md  cosmology.md  index.md  marching-tetrahedra.md  math.md
src/: CausticsA.cpp  CausticsA.h  CausticsD.h  Derivative.cpp  Derivative.h  Types.h  box_properties.rs  caustics.rs  cosmology.rs  error.rs  gadget_data.rs  geometry.rs  main.cpp  main.rs  marching_tetrahedra.rs  marching_triangles.rs  mesh.rs  numeric.rs  stencil.rs  util.rs
src/caustics/: a3.rs  hessian.rs  mod.rs
src/grf/: mod.rs
src/marching_tetrahedra/: gen.py  mod.rs
src/tricubic/: gen.py  mod.rs  table.rs
