[package]
name = "caustics3d"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ndarray = "0.15.3"
num-traits = "0.2.14"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust" }
fftw = "0.7.0"
assert_approx_eq = "1.1.0"
GSL = "4"
rand = "0.8.4"
rand_distr = "0.4.1"
lru-cache = "0.1.2"
